src/assets/styles/book.scss
.section-title {
  font-weight: normal;
}

.info-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  margin-top: 20px;

  .left-container {
    flex: 1;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    align-content: flex-start;
  }

  .image-container {
    text-align: center;
    img {
      max-width: 100%;
      max-height: 400px;
      width: auto;
      height: auto;
    }
  }

  .actions-container {
    flex: 1;
    margin-top: 10px;
  }

  .info {
    flex: 3;
    margin-left: 20px;

    h1 {
      font-weight: normal;
      margin-top: 0;

      #author {
        font-style: italic;

        a {
          text-decoration: none;
        }
      }
    }

    p {
      text-align: justify;

      .label {
        font-weight: bold;
      }
    }
  }
}

.stats-container {
  display: flex;

  .left-container {
    flex: 1;
  }

  .right-container {
    flex: 3;
    margin-left: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;

    .stat {
      flex: 1;
      width: 400px;
      margin-bottom: 5px;
      display: flex;
      align-items: center;

      .bar {
        flex: 2;
        display: flex;

        *:not([class^="not-filled"]) {
          border-radius: 10px;
          height: 15px;
          background-color: $cambalache-white;
        }

        @for $i from 1 through 100 {
          .filled-#{$i} {
            flex: $i;
          }

          .not-filled-#{100 - $i} {
            flex: 100 - $i;
          }
        }
      }

      .text {
        margin-left: 5px;
        flex: 3;
      }
    }
  }
}

.bottom-container {
  display: flex;
}

.genres-section {
  flex: 1;
  display: flex;
  flex-flow: column nowrap;

  a {
    text-decoration: none;
    margin-bottom: 10px;

    &:hover {
      text-decoration: underline;
    }
  }

}

.reviews-section {
  flex: 3;
  min-width: 0;
  margin-left: 20px;
  display: flex;
  flex-flow: column nowrap;

  .filled {
      color: $cambalache-yellow;
  }

  .empty {
      color: $cambalache-darkgrey;
      opacity: 0.7;
  }
}

